# supervised-learning

house_price/: Makefile  README.md  pyproject.toml
house_price/docs/: mkdocs.yml
house_price/docs/docs/: index.md
house_price/house_price/: dataset.py  features.py  plots.py
house_price/house_price/modeling/: predict.py  train.py
house_price/notebooks/: 0.01-data-exploration.ipynb
