[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "house_price"
version = "0.0.1"
description = "A supervised machine-learning problem. A regression problem."
authors = [
  { name = "Alireza Asgari" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["house_price"]
include = ["pyproject.toml", "house_price/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["house_price"]
force-sort-within-sections = true

